# NexusBom

./: .gitignore  BENCHMARK_RESULTS.md  CHANGELOG.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  test_debug.rs
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
assets/branding/: README.md  UPLOAD_GUIDE.md
crates/bom-adapters/: Cargo.toml
crates/bom-adapters/src/: lib.rs  rest.rs
crates/bom-benches/: Cargo.toml
crates/bom-benches/benches/: bom_benchmarks.rs
crates/bom-cache/: Cargo.toml
crates/bom-cache/src/: lib.rs  memory_cache.rs  persistent_cache.rs
crates/bom-calc/: Cargo.toml
crates/bom-calc/src/: costing.rs  engine.rs  explosion.rs  lib.rs  where_used.rs
crates/bom-cli/: Cargo.toml  README.md  example_bom.csv  example_bom.json
crates/bom-cli/locales/: de.yml  en.yml  zh-CN.yml  zh-TW.yml
crates/bom-cli/src/: data.rs  main.rs  output.rs
crates/bom-cli/src/commands/: cost.rs  explode.rs  mod.rs  where_used.rs
crates/bom-core/: Cargo.toml
crates/bom-core/src/: error.rs  lib.rs  models.rs  repository.rs
crates/bom-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/bom-ffi/include/: bom.h
crates/bom-ffi/src/: lib.rs
crates/bom-graph/: Cargo.toml
crates/bom-graph/src/: arena.rs  cycle.rs  graph.rs  lib.rs  traversal.rs
docs/: BENCHMARK_RESULTS.de.md  BENCHMARK_RESULTS.zh-CN.md  BENCHMARK_RESULTS.zh-TW.md  COMMERCIAL-LICENSE.de.md  COMMERCIAL-LICENSE.zh-CN.md  COMMERCIAL-LICENSE.zh-TW.md  CONTRIBUTING.de.md  CONTRIBUTING.zh-CN.md  CONTRIBUTING.zh-TW.md  PROJECT_SUMMARY.de.md  PROJECT_SUMMARY.zh-CN.md  PROJECT_SUMMARY.zh-TW.md  QUICKSTART.de.md  QUICKSTART.zh-CN.md  QUICKSTART.zh-TW.md  README.de.md  README.zh-CN.md  README.zh-TW.md  SETUP_DONATIONS.md
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
