[workspace]
resolver = "2"
members = [
    "crates/bom-core",
    "crates/bom-graph",
    "crates/bom-calc",
    "crates/bom-cache",
    "crates/bom-ffi",
    "crates/bom-adapters",
    "crates/bom-benches",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/bom"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rmp-serde = "1.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Parallelization
rayon = "1.8"

# Caching
moka = { version = "0.12", features = ["sync"] }
redb = "2.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# FFI
cbindgen = "0.26"

# Testing & Benchmarking
criterion = "0.5"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
