[package]
name = "bom-calc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bom-core = { path = "../bom-core" }
bom-graph = { path = "../bom-graph" }
rayon.workspace = true
serde.workspace = true
thiserror.workspace = true
rust_decimal.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion.workspace = true
