[package]
name = "bom-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bom"
path = "src/main.rs"

[dependencies]
bom-core = { path = "../bom-core" }
bom-calc = { path = "../bom-calc" }
bom-graph = { path = "../bom-graph" }

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# i18n
rust-i18n = "3"
sys-locale = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Other
rust_decimal = "1.38"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
colored = "2.1"
